Closed Bug 908453 Opened 11 years ago Closed 11 years ago

[e10s] Focusing on content area doesn't work on OS X

Categories

(Core :: XUL, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix-focus.patch (obsolete) — Splinter Review
In nsXULElement.cpp, there's an OS X specific check that disables focusing on non-list elements. This is fine in same-process builds. On multi-process, it prevents the content area from grabbing focus, since the UI process can't see past the <browser> element.

I'm not sure if this is the right fix, but just excluding <browser> elements from this check seems to fix the issue.
Attached patch fix-focus.patchSplinter Review
Slightly better fix
Attachment #794280 - Attachment is obsolete: true
Attachment #794280 - Flags: review?(bugs)
Attachment #794336 - Flags: review?(bugs)
Comment on attachment 794336 [details] [diff] [review]
fix-focus.patch

Fix the comment too.
Attachment #794336 - Flags: review?(bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/6b2ac23b18f7
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: