Fix click focusing on multi-process OS X (bug 908453, r=smaug).